# Bank_Marketing

./: README.md  pyproject.toml  relatorio_marketing_bancario.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
